# OthelloProject

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  othello  othello.c  othello.h  othello.hh  othello_demo.c  othello_tests.cc
